kic/expose-kong-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-manager
spec:
  ports:
  - name: manager
    port: 8002
    protocol: TCP
    targetPort: 8002
  selector:
    app: ingress-kong
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kong-manager
spec:
  port:
    targetPort: manager
  to:
    kind: Service
    name: kong-manager
---
apiVersion: v1
kind: Service
metadata:
  name: kong-admin
spec:
  ports:
  - name: admin
    port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: ingress-kong
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kong-admin
spec:
  port:
    targetPort: admin
  to:
    kind: Service
    name: kong-admin
---
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
spec:
  ports:
  - name: proxy
    port: 8000
    protocol: TCP
    targetPort: 8000
  - name: proxy-ssl
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: ingress-kong
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kong-proxy
spec:
  port:
    targetPort: proxy
  to:
    kind: Service
    name: kong-proxy
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kong-proxy-ssl
spec:
  port:
    targetPort: proxy-ssl
  to:
    kind: Service
    name: kong-proxy
