kic/kuma-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  namespace: kuma-demo
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /demo-app
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
