kic/meshgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-gateway-svc
spec:
  ports:
  - name: gateway
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kong-mesh-control-plane
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kong-gateway-svc
spec:
  port:
    targetPort: gateway
  to:
    kind: Service
    name: kong-gateway-svc
